--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -210,17 +210,6 @@
 "pin-actions-pin-blocked" = "%@ is blocked.";
 "pin-actions-puk-change-warning" = "If you forget the PUK code or the certificates remain blocked, you have to visit the service center to obtain new codes.";
 
-
-// *** Settings ***
-"settings-new-container-format" = "New container format";
-"settings-application-version" = "Version";
-"settings-about" = "About";
-"settings-id-code-title"= "ID code";
-"settings-phone-number-title" = "Phone number";
-"settings-id-code-alert-message" = "Type in your ID code";
-"settings-phone-number-alert-message" = "Type in your phone number";
-"settings-mobile-id-header" = "Mobile-ID";
-
 // *** About ***
 "about-development" = "Software ordered by RIA, developed by Mobi Lab";
 "about-dependencies" = "Additional dependencies";
@@ -339,3 +328,9 @@
 "my-eid-error-code-contained-in-personal-code" = "New %@ code can't be part of your personal code";
 "my-eid-error-code-is-date-of-birth" = "New %@ code can't be your date of birth";
 "my-eid-error-code-too-easy" = "New %@ code can't be so easy";
+"settings-title" = "Settings";
+"settings-phone-number-title" = "MOBILE-ID PHONE NUMBER";
+"settings-phone-number-placeholder" = "Country code and phone number";
+"settings-id-code-title" = "ID CODE";
+"settings-id-code-placeholder" = "ID code";
+"settings-container-type-title" = "DEFAULT CONTAINER TYPE";
