* Fixed some localization keys for diagnostics screen
MOPPIOS-140

Signed-off-by: Sander Hunt <sander.hunt@fob-solutions.com>

--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -335,6 +335,6 @@
 "settings-id-code-placeholder" = "ID code";
 "settings-container-type-title" = "DEFAULT CONTAINER TYPE";
 "diagnostics-title" = "Diagnostics";
-"diagnostics-app-version" = "Application version: ";
-"diagnostics-ios-version" = "Operating system version: ";
+"diagnostics-app-version" = "Application version";
+"diagnostics-ios-version" = "Operating system version";
 "diagnostics-libraries-label" = "Libraries";
