--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -339,3 +339,4 @@
 "diagnostics-app-version" = "Application version";
 "diagnostics-ios-version" = "Operating system version";
 "diagnostics-libraries-label" = "Libraries";
+"about-title" = "About";
