--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -338,3 +338,4 @@
 "diagnostics-app-version" = "Application version";
 "diagnostics-ios-version" = "Operating system version";
 "diagnostics-libraries-label" = "Libraries";
+"about-title" = "About";
