--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -301,7 +301,7 @@
 "my-eid-info-bullet-wrong-pin1-warning" = "Kui sisestad PIN1 koodi kolm korda valesti siis isikutuvastamise sertifikaat blokeeritakse ning ID-kaarti pole võimalik isikutuvamiseks kasutada enne blokeeringu tühistamist PUK koodi abil";
 "my-eid-code-changed-success-message" = "%@ MUUDETUD";
 "my-eid-code-unblocked-success-message" = "%@ LAHTI LUKUSTATUD";
-"my-eid-wrong-code-message" = "Oled sisestanud %i korda vale %@ koodi. Sul on järgi veel %i katset.";
+"my-eid-wrong-code-message" = "Oled sisestanud 1 kord vale %@ koodi. Sul on järgi veel 2 katset.";
 "my-eid-wrong-code-message-singular" = "Oled sisestanud 2 korda vale %@ koodi. Sul on järgi veel 1 katse";
 "my-eid-code-blocked-message" = "Sa oled sisestanud 3 korda vale %@ koodi. %@ on blokeeritud";
 // *** My eID info bullets ***
