* Implemented device jailbroken check
MOPPIOS-344

Signed-off-by: Sander Hunt <sander.hunt@fob-solutions.com>

--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -198,3 +198,4 @@
 "diagnostics-ios-version" = "OS";
 "diagnostics-libraries-label" = "Libraries";
 "about-title" = "Info";
+"jailbreak-message" = "This app cannot be used in jailbroken device";
