--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -111,6 +111,7 @@
 "card-reader-state-initial" = "Подключите считыватель карты и вставьте в него Вашу ID-карту";
 "card-reader-state-reader-not-found" = "Считыватель карты не обнаружен";
 "card-reader-state-id-card-not-found" = "Считыватель карт.\nВставьте свою ID-карту в устройство чтения.";
+"card-reader-state-id-card-connected" = "Обнаружена ID-карта.\nЗапрашивается информация.";
 "card-reader-state-ready" = "Готов подписать с удостоверением личности.\n%@ (%@)\nВведите PIN2";
 "signing-in-progress" = "Подписание.\nПодождите пожалуйста";
 "wrong-pin2" = "Неверный PIN2. У вас осталось %d попытки.\nНабрав неверный PIN2 еще 2 раза, ваш PIN2 будет заблокирован";
