--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -107,8 +107,9 @@
 "recent-containers-empty-search-message" = "Dokumenti ei leitud";
 "sign-title-mobile-id" = "Mobiil-ID";
 "sign-title-id-card" = "ID kaart";
-"card-reader-state-reader-not-found" = "Ühtegi kaardilugejate pole ühendatud";
+"card-reader-state-reader-not-found" = "Ühtegi kaardilugejat pole ühendatud";
 "card-reader-state-id-card-not-found" = "Kaardilugeja leitud.\nSisesta ID-kaart lugejasse.";
+"card-reader-state-id-card-connected" = "ID-kaart leitud.\nPärin andmeid.";
 "card-reader-state-ready" = "Valmis allkirjastamiseks ID-kaardiga.\n%@ (%@)\nSisesta PIN2";
 "signing-in-progress" = "Toimub allkirjastamine.\nPalun oota.";
 "wrong-pin2" = "Vale PIN2. %d katset järgi.\nSisestades %d korda vale PIN2 sinu PIN2 lukustub";
