--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -21,10 +21,12 @@
 
 // TabBar
 "tab-my-eid" = "MY eID";
+"tab-crypto" = "CRYPTO";
 "tab-signature" = "SIGNATURE";
 "tab-sign-button" = "SIGN";
 "tab-share-button" = "SHARE";
 "tab-encrypt-button" = "ENCRYPT";
+"tab-confirm-button" = "CONFIRM SELECTION";
 
 // Main menu
 "menu-help" = "HELP";
@@ -37,6 +39,21 @@
 "signature-view-begin-label" = "Choose file to sign or validate";
 "signature-view-begin-button" = "CHOOSE FILE";
 "signature-details-title" = "Signature details";
+
+// Crypto
+"crypto-view-begin-label" = "Choose a file to encrypt or decrypt";
+"crypto-view-begin-button" = "CHOOSE FILE";
+"crypto-empty-ldap-label" = "Person or company does not own a valid certificate.\nIt is necessary to have a valid certificate for encryption.\nContact for assistance by email abi@id.ee or call 1777 (only from Estonia), (+372) 677 3377 when calling from abroad.";
+"crypto-ldap-search-placeholder" = "Enter personal code, company or registry code";
+"crypto-encryption-error-text" = "Something went wrong with encryption";
+"crypto-encryption-success" = "ENCRYPTION SUCCEEDED";
+"crypto-no-addressees-warning" = "No addressees specified";
+"crypto-valid-to" = "valid to";
+"crypto-type-id-card" = "ID-card";
+"crypto-type-digi-id" = "Digi-ID";
+"crypto-type-eseal" = "e-Seal";
+"crypto-add-addressee-button-title" = "ADD";
+"crypto-addressee-added-button-title" = "ADDED";
 
 // Signing view
 "signing-recent-containers" = "Recent documents";
@@ -58,6 +75,7 @@
 
 // DataFile import
 "file-import-title" = "+ ADD MORE FILES";
+"addressee-import-title" = "+ ADD ADDRESSEE";
 "file-import-open-existing-failed-alert-title" = "Error opening container";
 "file-import-open-existing-failed-alert-message" = "Failed to open container %@";
 "file-import-create-new-failed-alert-title" = "Error creating container";
@@ -66,7 +84,9 @@
 "container-details-signing-success" = "SIGNATURE ADDED";
 
 "container-header-files-title" = "Container files";
-"container-header-create-files-title" = "Files chosen for signing";
+"container-header-create-signing-files-title" = "Files chosen for signing";
+"container-header-create-encryption-files-title" = "Files chosen for encryption";
+"container-header-create-addressee-title" = "Addressees";
 "container-header-timestamp-title" = "Timestamp";
 "container-header-signatures-title" = "Container signatures";
 "container-row-edit-remove" = "Delete";
@@ -77,6 +97,7 @@
 "container-error-message-unknown-signatures" = "%d UNKNOWN SIGNATURES";
 "container-signature-signed" = "Signed %@";
 "container-missing-signatures" = "Container is not signed";
+"container-missing-addressees" = "Addressees are missing";
 "container-signature-status-valid" = "Signature is valid";
 "container-signature-status-warning" = "(Warnings)";
 "container-signature-status-non-qscd" = "(Restrictions)";
@@ -105,6 +126,8 @@
 "mobile-id-challenge-title" = "Sign with Mobile-ID app";
 "mobile-id-challenge-waiting-response" = "Waiting for response ...";
 "container-sign-title" = "Sign";
+"container-encryption-title" = "Encryption";
+"container-addressee-title" = "Adding addressees";
 "container-validate-title" = "Container verification";
 "container-validating" = "Loading...";
 "importing-files-progress-message" = "Importing files...";
