--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -26,6 +26,7 @@
 "tab-sign-button" = "ALLKIRJASTA";
 "tab-share-button" = "JAGA";
 "tab-encrypt-button" = "KRÜPTEERI";
+"tab-decrypt-button" = "DEKRÜPTEERI";
 "tab-confirm-button" = "KINNITA VALIK";
 
 // Main menu
@@ -49,6 +50,8 @@
 "crypto-empty-ldap-label" = "Isikul või asutusel puudub kehtiv sertifikaat.\nKrüpteerimiseks on vaja kehtivat sertifikaati.\nKüsimustega pöördu ID-abiliini poole e-postiaadressil abi@id.ee või helista Eesti piires lühinumbril 1777 ja välismaalt (+372) 677 3377.";
 "crypto-ldap-search-placeholder" = "Sisesta isikukood, asutus või registrikood";
 "crypto-encryption-error-text" = "Midagi läks krüpteerimisel valesti";
+"crypto-decryption-error-text" = "Midagi läks dekrüpteerimisel valesti";
+
 "crypto-encryption-success" = "KRÜPTEERIMINE ÕNNESTUS";
 "crypto-no-addressees-warning" = "Ühtegi adressaati ei ole lisatud";
 "crypto-valid-to" = "kehtiv kuni";
@@ -70,6 +73,7 @@
 "action-cancel" = "Tühista";
 "action-delete" = "Eemalda";
 "action-sign" = "Allkirjasta";
+"action-decrypt" = "Dekrüpteeri";
 
 // *** Signed containers ***
 
@@ -82,7 +86,7 @@
 "file-import-create-new-failed-alert-message" = "%@ laadmine ebaõnnesus";
 // Details
 "container-details-signing-success" = "ALLKIRI LISATUD";
-
+"container-details-decryption-success" = "DEKRÜPTEERIMINE ÕNNESTUS";
 "container-header-files-title" = "Ümbriku sisu";
 "container-header-create-signing-files-title" = "Allkirjastamiseks valitud failid";
 "container-header-create-encryption-files-title" = "Krüpteerimiseks valitud failid";
@@ -127,6 +131,7 @@
 "mobile-id-challenge-waiting-response" = "Ootan vastust ...";
 "container-sign-title" = "Allkirjastamine";
 "container-encryption-title" = "Krüpteerimine";
+"container-decryption-title" = "Dekrüpteerimine";
 "container-addressee-title" = "Adressaatide lisamine";
 "container-validate-title" = "Ümbriku valideerimine";
 "container-validating" = "Laen...";
@@ -140,14 +145,20 @@
 "card-reader-state-reader-not-found" = "Ühtegi kaardilugejat pole ühendatud";
 "card-reader-state-id-card-not-found" = "Kaardilugeja leitud.\nSisesta ID-kaart lugejasse.";
 "card-reader-state-id-card-connected" = "ID-kaart leitud.\nPärin andmeid.";
-"card-reader-state-ready" = "Valmis allkirjastamiseks ID-kaardiga.\n%@ (%@)\nSisesta PIN2";
+"card-reader-state-ready-for-pin2" = "Valmis allkirjastamiseks ID-kaardiga.\n%@ (%@)\nSisesta PIN2";
+"card-reader-state-ready-for-pin1" = "Valmis allkirjastamiseks ID-kaardiga.\n%@ (%@)\nSisesta PIN1";
 "signing-in-progress" = "Toimub allkirjastamine.\nPalun oota.";
+"decryption-in-progress" = "Toimub dekrüpteerimine.\nPalun oota.";
 "wrong-pin2" = "Vale PIN2. %d katset järgi.\nSisestades %d korda vale PIN2 sinu PIN2 lukustub";
+"wrong-pin1" = "Vale PIN1. %d katset järgi.\nSisestades %d korda vale PIN1 sinu PIN1 lukustub";
 "wrong-pin2-single" = "Vale PIN2. 1 katse järgi.Sisestades vale PIN2-e sinu PIN2 lukustub";
+"wrong-pin1-single" = "Vale PIN1. 1 katse järgi.Sisestades vale PIN1-e sinu PIN1 lukustub";
 "card-reader-state-initial" = "Allkirjastamiseks ühenda kaardilugeja telefoniga ja sisesta enda ID-kaart lugejasse.\nKui kasutad Bluetooth lugejat siis veendu, et telefonis on sisse lülitatud Bluetooth";
 "pin2-textfield-label" = "PIN2";
+"pin1-textfield-label" = "PIN1";
 "pin2-blocked-alert" = "PIN2 blokeeritud.\nMine Minu eID vaatele, et avada PIN2";
 "generic-error-message" = "Midagi läks valesti. Palun proovi uuesti";
+"decryption-error-message" = "Midagi läks dekrüpteerimisel valesti. Palun proovi uuesti";
 "signing-aborted-message" = "Viga: signeerimise protsess katkestatud";
 "my-eid-status-reader-not-found" = "Ühenda kaardilugeja telefoniga ja sisesta ID-kaart lugejasse.";
 "my-eid-status-card-not-found" = "Kaardilugeja leitud.\nSisesta ID-kaart lugejasse.";
